[package]
name = "mcp-server-cortex"
version = "0.1.0"
edition = "2024" 
authors = ["Gianluca Brigandi"]
license = "MIT"
description = "An MCP server that acts as a bridge to a Cortex instance, exposing Cortex analyzer functionalities as tools."
repository = "https://github.com/gbrigandi/mcp-server-cortex" # Please verify this URL
readme = "README.md"

[dependencies]
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
cortex-client = "0.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
schemars = "0.8" 
